--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
 
 .body {
 
-   background: url("bg.jpg");
+    background: url("bg.jpg");
     min-height: 100vh;
     background-size:100vw 100vh;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 #scoreBox
@@ -39,9 +40,9 @@
     font-size: 30px;
     font-weight: bold;
     font-family: 'New Tegomin', serif;
-    background-color: #B8F1B0;
+    background-color: #b8f1b0;
     border: 2px solid white;
-    color: black;
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 5px;
 }
@@ -79,3 +80,4 @@
     border: 0.25vmin solid white;
     border-radius: 25%;
 }
+
